[tool.poetry]
name = "aoc-2023-day2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_2023_day2", from = "src"}]

[tool.poetry.scripts]
aoc = "aoc_2023_day2.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.338"
bpython = "^0.24"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
